--- a/project/final2.html
+++ b/project/final2.html
@@ -31,7 +31,7 @@
 			<div class="content-wrap clearfix">
 				<div class="summary">
 					<h2>Hello!</h2>
-					<p>[Profile summary here] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
+					<p>[Profile summary here] We are a Barcelona- based garden .... consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
 					<p>Links to stuff about you, if needed. <a href="#">link</a> and <a href="#">link</a>.</p>
 					<p>Or another paragraph!</p>
 				</div>
