--- a/project/final2.html
+++ b/project/final2.html
@@ -22,7 +22,7 @@
 		</nav>
 
 		<header>
-			<h1>My Little Garden</h1>
+			<h1>My Little Garden wow</h1>
 			<h2>Building Green Communities</h2>
 		</header>
 
