--- a/project/filetotakestufffrom.html
+++ b/project/filetotakestufffrom.html
@@ -11,7 +11,7 @@
 		<script src="scripts/prefixfree.min.js"></script>
 	</head>
 	<body>
-		<!-- HEADER -->
+		<!-- HEADER
 		<nav>
 			<ul>
 				<li><a href="exercise7-home.html">Our Story</a></li>
@@ -20,6 +20,32 @@
 				<li><a href="#">Our Network</a></li>
 			</ul>
 		</nav>
+	coment end here if you delete that you go back to the old nov bar-->
+
+<!-- NEW NAW BAR by Mar -->
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="#">Navbar w/ text</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarText">
+			    <ul class="navbar-nav mr-auto">
+			      <li class="nav-item active">
+			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">AboutUs</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Pricing</a>
+			      </li>
+			    </ul>
+			    <span class="navbar-text">
+			      Navbar text with an inline element
+			    </span>
+			  </div>
+			</nav>
+
 
 		<header>
 			<h1>My Little Garden</h1>
