--- a/project/index.html
+++ b/project/index.html
@@ -57,10 +57,18 @@
 		<section class="profile">
 			<div class="content-wrap clearfix">
 				<div class="summary">
-					<h2>Hello!</h2>
-					<p>[Profile summary here] We are a Barcelona- based garden .... consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
-					<p>Links to stuff about you, if needed. <a href="#">link</a> and <a href="#">link</a>.</p>
-					<p>Or another paragraph!</p>
+					<h2>Hello fellow gardener!</h2>
+					<p>Are you passionate about growing your own fruits and vegetables? Do you adore outdoor and gardening? Say no more! You're in the right place🌱 </p>
+					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrion. We provide a perfect option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! 🍓🍅🌷  All while being supported by our wonderful network and staff 🧝🧝🧝</p>
+					<h4> How does it work?</h4>
+
+					<ol>
+						<li> You choose one of the packages we offer, based on how long you'd like to have a small garden at Berardo</li>
+						<li> You get in touch with us via the contacts listed below </li>
+						<li> You receive a follow up email and a phone call fron one of our garden elfs / staff, who will answer any questions you might have </li>
+						<li> One of our small Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
+					</ol>
+			<p>	Here's an example of how your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg">look</a> like </p>
 				</div>
 			</div>
 		</section>
@@ -68,44 +76,44 @@
 		<!-- pricing FOR THE PRICING SECTION -->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
-				<h2>Pricing</h2>
+				<h2>Discover our pricing packages</h2>
 
 				<div class="pricing-list clearfix">
-					<h3>List Option / Title</h3>
+					<h3>What will you get?</h3>
 
 					<div class="columns">
-						<h4>Best at:</h4>
+						<h4>Support:</h4>
 						<ul>
-							<li><i class="fa fa-check"></i> HTML / HTML5</li>
-							<li><i class="fa fa-check"></i> CSS / CSS3</li>
-							<li><i class="fa fa-check"></i> Less / Sass</li>
-							<li><i class="fa fa-check"></i> JavaScript / jQuery</li>
+							<li><i class="fa fa-check"></i> Gardening tools & equipment </li>
+							<li><i class="fa fa-check"></i> Access to our irrigation system </li>
+							<li><i class="fa fa-check"></i> Contacts to trusted suppliers </li>
 						</ul>
 					</div>
 					<div class="columns">
-						<h4>Worked with:</h4>
+						<h4>Knowledge:</h4>
 						<ul>
-							<li><i class="fa fa-check"></i> Wordpress</li>
-							<li><i class="fa fa-check"></i> PHP</li>
-							<li><i class="fa fa-check"></i> Processing</li>
+							<li><i class="fa fa-check"></i> First-hand experience </li>
+							<li><i class="fa fa-check"></i> Monthly newsletter with tips </li>
+							<li><i class="fa fa-check"></i> Coaching from garden elfs </li>
 						</ul>
 					</div>
 					<div class="columns">
-						<h4>Learning:</h4>
+						<h4>Network:</h4>
 						<ul>
-							<li><i class="fa fa-check"></i> angular.js</li>
-							<li><i class="fa fa-check"></i> Stylus</li>
+							<li><i class="fa fa-check"></i> Bernardo community </li>
+							<li><i class="fa fa-check"></i> Locals and gardening fans </li>
+							<li><i class="fa fa-check"></i> Suppliers </li>
 						</ul>
 					</div>
 				</div>
 
 				<div class="pricing-circles">
-					<h3>Circle Option / Title</h3>
+					<h3>What will you pay?</h3>
 					<ul>
-						<li><span>Social Media</span></li>
-						<li><span>Marketing Strategy</span></li>
-						<li><span>Brand Identity</span></li>
-						<li><span>Graphic Design</span></li>
+						<li><span>24€     / 1 month </span></li>
+						<li><span>60€     / 1 quarter</span></li>
+						<li><span>100€     / 6 months</span></li>
+						<li><span>175€ / 1 year</span></li>
 					</ul>
 				</div>
 			</div>
@@ -118,22 +126,19 @@
 		<!-- CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
-				<h2>Let's keep in touch!</h2>
+				<h2>Get in touch or sign-up to find out more! </h2>
 
 				<div class="social">
-					<a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
-					<a href="#" title="Instagram"><i class="fa fa-instagram"></i></a>
-					<a href="#" title="Facebook"><i class="fa fa-facebook"></i></a>
-					<a href="#" title="Youtube"><i class="fa fa-youtube"></i></a>
+					<a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
 				</div>
 
-				<p><a href="mailto:hello@your-email.com">hello@your-email.com</a></p>
+				<p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
 				<p>+34.123.4567</p>
 				<p>123 Anywhere St.<br>
 				 Barcelona, Spain</p>
 
 				<footer>
-					<p class="copyright">Copyright &#169; 2019 by My Little Garden</p>
+					<p class="copyright">Copyright &#169; 2019 by Berardo: My Little Garden</p>
 				</footer>
 			</div>
 		</section>
