--- a/project/index.html
+++ b/project/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="css/final.css">
 	</head>
 	<body>
-		<!-- HEADER
+		<!-- HEADEr
 		<nav>
 			<ul>
 				<li><a href="exercise7-home.html">Our Story</a></li>
