--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -1,2 +1,14 @@
 About us
 <!--comment-->
+<!DOCTYPE html>
+<html lang="en">
+<section class="profile">
+  <div class="content-wrap clearfix">
+    <div class="summary">
+      <h2>Hello!</h2>
+      <p>[Profile summary here] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
+      <p>Links to stuff about you, if needed. <a href="#">link</a> and <a href="#">link</a>.</p>
+      <p>Or another paragraph!</p>
+    </div>
+  </div>
+</section>
