--- a/project/index.html
+++ b/project/index.html
@@ -76,7 +76,7 @@
 		<!-- pricing FOR THE PRICING SECTION -->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
-				<h2>Discover our pricing packages</h2>
+				<h2>Discover our pricing packages I hate to delete this</h2>
 
 				<div class="pricing-list clearfix">
 					<h3>What will you get?</h3>
