--- a/project/index.html
+++ b/project/index.html
@@ -34,7 +34,7 @@
 				        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#">AboutUs</a>
+				        <a class="nav-link" href="#">Our Story</a>
 				      </li>
 				      <li class="nav-item">
 				        <a class="nav-link" href="#pricingTarget">Pricing</a>
@@ -73,10 +73,65 @@
 			</div>
 		</section>
 
+		<!-- Our Story -->
+		<section class="our-story">
+			<div class="content-wrap">
+				<h2>Our Story</h2>
+
+				<div class="item clearfix">
+
+					<div class="details">
+						<h4 class="company">Company Name</h4>
+						<h3>Job title 1</h3>
+						<p class="date">July 2014 - Present</p>
+						<h3>Job title 2</h3>
+						<h4 class="date">July 2011 - July 2014</h4>
+					</div>
+					<div class="description">
+						<p><strong>Job title 1:</strong> [You can use this portion if you held several positions in the company.] Suspendisse dignissim nisi non velit interdum, in condimentum augue varius. Nullam ac felis eu lacus rhoncus posuere. Fusce pretium auctor bibendum. Suspendisse rutrum rhoncus purus sed dapibus. Nulla in viverra justo. Quisque id sapien sed urna lobortis rutrum eu sed enim. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus.</p>
+
+						<p><strong>Job title 2:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptas, odio deleniti omnis. Eaque, numquam itaque! Maxime, iure dolore ratione tenetur. Sunt nam maxime repellendus! Vitae, natus fugit earum consectetur.</p>
+					</div>
+
+				</div><!-- close .job-item -->
+
+				<div class="item clearfix">
+
+					<div class="details">
+						<h4 class="company">Company Name</h4>
+						<h3>Job title</h3>
+						<p class="date">September 2012 - Present</p>
+					</div>
+					<div class="description">
+						<p>Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
+					</div>
+
+				</div><!-- close .job-item -->
+
+				<div class="item clearfix">
+					<div class="details">
+						<h4 class="company">Company Name</h4>
+						<h3>Job Title</h3>
+						<p class="date">March 2013 - February 2014</p>
+					</div>
+					<div class="description">
+						<p>Redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
+
+						<p>Key contributions:</p>
+						<ul>
+							<li>Responsible for ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+							<li>Created ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+							<li>Organized ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						</ul>
+					</div>
+				</div><!-- close .job-item -->
+			</div>
+		</section>
+		
 		<!-- pricing FOR THE PRICING SECTION -->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
-				<h2>Discover our pricing packages I hate to delete this</h2>
+				<h2>Discover our pricing packages</h2>
 
 				<div class="pricing-list clearfix">
 					<h3>What will you get?</h3>
@@ -138,7 +193,7 @@
 				 Barcelona, Spain</p>
 
 				<footer>
-					<p class="copyright">Copyright &#169; 2019 by Berardo: My Little Garden</p>
+					<p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
 				</footer>
 			</div>
 		</section>
