comit with href to css file

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -1,7 +1,16 @@
-About us
-<!--comment-->
+<!--about us SECTION Working in porgress-->
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>My Little Garden / BERARDO | Barcelona</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/final.css">
+	</head>
+
 <section class="profile">
   <div class="content-wrap clearfix">
     <div class="summary">
