--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -10,6 +10,35 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
 	</head>
+<!-- NEW NAW BAR by Mar -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Berardo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#homeTarget">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="aboutus.html">About us</a>
+        </li>
+        </li>
+       <li class="nav-item">
+           <a class="nav-link" href="visitus.html">Vist us</a>
+       </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#pricingTarget">Pricing</a>
+      </ul>
+      <span class="navbar-text">
+        my little garden
+      </span>
+    </div>
+  </nav>
+
+
+
 
 <section class="profile">
   <div class="content-wrap clearfix">
@@ -19,5 +48,78 @@
       <p>Links to stuff about you, if needed. <a href="#">link</a> and <a href="#">link</a>.</p>
       <p>Or another paragraph!</p>
     </div>
+  </div>
+</section>
+
+<!-- Our Story -->
+<section id="usTarget" class="about-us">
+  <div class="content-wrap">
+    <h2>Work Experience</h2>
+    <div class="item clearfix">
+      <div class="details">
+        <h4 class="company">Company Name</h4>
+        <h3>Job title 1</h3>
+        <p class="date">July 2014 - Present</p>
+        <h3>Job title 2</h3>
+        <h4 class="date">July 2011 - July 2014</h4>
+      </div>
+      <div class="description">
+        <p><strong>Job title 1:</strong> [You can use this portion if you held several positions in the company.] Suspendisse dignissim nisi non velit interdum, in condimentum augue varius. Nullam ac felis eu lacus rhoncus posuere. Fusce pretium auctor bibendum. Suspendisse rutrum rhoncus purus sed dapibus. Nulla in viverra justo. Quisque id sapien sed urna lobortis rutrum eu sed enim. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus.</p>
+
+        <p><strong>Job title 2:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptas, odio deleniti omnis. Eaque, numquam itaque! Maxime, iure dolore ratione tenetur. Sunt nam maxime repellendus! Vitae, natus fugit earum consectetur.</p>
+      </div>
+
+    </div><!-- close .job-item -->
+
+    <div class="item clearfix">
+
+      <div class="details">
+        <h4 class="company">Company Name</h4>
+        <h3>Job title</h3>
+        <p class="date">September 2012 - Present</p>
+      </div>
+      <div class="description">
+        <p>Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
+      </div>
+
+    </div><!-- close .job-item -->
+
+    <div class="item clearfix">
+      <div class="details">
+        <h4 class="company">Company Name</h4>
+        <h3>Job Title</h3>
+        <p class="date">March 2013 - February 2014</p>
+      </div>
+      <div class="description">
+        <p>Redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
+
+        <p>Key contributions:</p>
+        <ul>
+          <li>Responsible for ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+          <li>Created ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+          <li>Organized ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+        </ul>
+      </div>
+    </div><!-- close .job-item -->
+  </div>
+</section>
+<!-- CONTACT INFO -->
+<section class="contact">
+  <div class="content-wrap clearfix">
+    <h2>Get in touch to find out more! </h2>
+
+    <div class="social">
+      <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+    </div>
+
+    <p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
+    <p>+34.123.4567</p>
+    <p>123 Anywhere St.<br>
+     Barcelona, Spain</p>
+
+    <footer>
+      <p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
+    </footer>
   </div>
 </section>
