--- a/project/index.html
+++ b/project/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
+		<link rel="shortcut icon" href="planting.ico">
 	</head>
 	<body id="homeTarget">
 		<!-- PLEAS ALWAYS ADD COMENTS TO DEFINE WHATs THE NEW SECTION ABOUT-->
@@ -24,14 +25,14 @@
 				        <a class="nav-link" href="#homeTarget">Home <span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#storyTarget">Our Story</a>
+				        <a class="nav-link" href="aboutus.html">About us</a>
 							</li>
+							</li>
+						 <li class="nav-item">
+								 <a class="nav-link" href="visitus.html">Vist us</a>
+						 </li>
 				      <li class="nav-item">
 				        <a class="nav-link" href="#pricingTarget">Pricing</a>
-				      </li>
-							<li class="nav-item">
-									<a class="nav-link" href="visitus.html">Vist us</a>
-							</li>
 				    </ul>
 				    <span class="navbar-text">
 				      my little garden
@@ -53,71 +54,21 @@
 					<h2>Hello fellow gardener!</h2>
 					<p>Are you passionate about growing your own fruits and vegetables? Do you adore outdoor and gardening? Say no more! You're in the right place🌱 </p>
 					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrion. We provide a perfect option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! 🍓🍅🌷  All while being supported by our wonderful network and staff 🧝🧝🧝</p>
-					<h4> How does it work?</h4>
-
-					<ol>
-						<li> You choose one of the packages we offer, based on how long you'd like to have a small garden at Berardo</li>
-						<li> You get in touch with us via the contacts listed below </li>
-						<li> You receive a follow up email and a phone call fron one of our garden elfs / staff, who will answer any questions you might have </li>
-						<li> One of our small Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
-					</ol>
-			<p>	Here's an example of how your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg">look</a> like </p>
-				</div>
+			</div>
 			</div>
 		</section>
-
-		<!-- Our Story -->
-		<section id="storyTarget" class="our-story">
+		<!-- how it works new section -->
+		<section id="worksTarget" class="how-works">
 			<div class="content-wrap">
-				<h2>Our Story</h2>
-
-				<div class="item clearfix">
-
-					<div class="details">
-						<h4 class="company">Company Name</h4>
-						<h3>Job title 1</h3>
-						<p class="date">July 2014 - Present</p>
-						<h3>Job title 2</h3>
-						<h4 class="date">July 2011 - July 2014</h4>
-					</div>
-					<div class="description">
-						<p><strong>Job title 1:</strong> [You can use this portion if you held several positions in the company.] Suspendisse dignissim nisi non velit interdum, in condimentum augue varius. Nullam ac felis eu lacus rhoncus posuere. Fusce pretium auctor bibendum. Suspendisse rutrum rhoncus purus sed dapibus. Nulla in viverra justo. Quisque id sapien sed urna lobortis rutrum eu sed enim. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus.</p>
-
-						<p><strong>Job title 2:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptas, odio deleniti omnis. Eaque, numquam itaque! Maxime, iure dolore ratione tenetur. Sunt nam maxime repellendus! Vitae, natus fugit earum consectetur.</p>
-					</div>
-
-				</div><!-- close .job-item -->
-
-				<div class="item clearfix">
-
-					<div class="details">
-						<h4 class="company">Company Name</h4>
-						<h3>Job title</h3>
-						<p class="date">September 2012 - Present</p>
-					</div>
-					<div class="description">
-						<p>Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
-					</div>
-
-				</div><!-- close .job-item -->
-
-				<div class="item clearfix">
-					<div class="details">
-						<h4 class="company">Company Name</h4>
-						<h3>Job Title</h3>
-						<p class="date">March 2013 - February 2014</p>
-					</div>
-					<div class="description">
-						<p>Redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
-
-						<p>Key contributions:</p>
-						<ul>
-							<li>Responsible for ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-							<li>Created ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-							<li>Organized ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-						</ul>
-					</div>
-				</div><!-- close .job-item -->
+				<h2> How does it work?</h2>
+				<ol>
+					<li> You choose one of the packages we offer, based on how long you'd like to have a small garden at Berardo</li>
+					<li> You get in touch with us via the contacts listed below </li>
+					<li> You receive a follow up email and a phone call from one of our garden elfs / staff, who will answer any questions you might have </li>
+					<li> One of our small Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
+				</ol>
+				<p>	Here's an example of how your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg">look</a> like
+				</p>
 			</div>
 		</section>
 
@@ -148,7 +99,7 @@
 					<div class="columns">
 						<h4>Network:</h4>
 						<ul>
-							<li><i class="fa fa-check"></i> Bernardo community </li>
+							<li><i class="fa fa-check"></i> Berardo community </li>
 							<li><i class="fa fa-check"></i> Locals and gardening fans </li>
 							<li><i class="fa fa-check"></i> Suppliers </li>
 						</ul>
@@ -167,17 +118,14 @@
 			</div>
 		</section>
 
-
-
-
-
 		<!-- CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
-				<h2>Get in touch or sign-up to find out more! </h2>
+				<h2>Get in touch to find out more! </h2>
 
 				<div class="social">
 					<a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
 				</div>
 
 				<p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
@@ -190,6 +138,7 @@
 				</footer>
 			</div>
 		</section>
+
 	</body>
 	<script
 	  src="https://code.jquery.com/jquery-3.4.1.min.js"
