--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
 				  <div class="collapse navbar-collapse" id="navbarText">
 				    <ul class="navbar-nav mr-auto">
 				      <li class="nav-item active">
-				        <a class="nav-link" href="#homeTarget">Home <span class="sr-only">(current)</span></a>
+				        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
 				        <a class="nav-link" href="aboutus.html">About us</a>
