--- a/project/index.html
+++ b/project/index.html
@@ -51,7 +51,7 @@
 		<section class="profile">
 			<div class="content-wrap clearfix">
 				<div class="summary">
-					<h2>Hello fellow gardener!</h2>
+					<h2>Hello gardener!</h2>
 					<p>Are you passionate about growing your own fruits and vegetables? Do you adore outdoor and gardening? Say no more! You're in the right place🌱 </p>
 					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrion. We provide a perfect option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! 🍓🍅🌷  All while being supported by our wonderful network and staff 🧝🧝🧝</p>
 			</div>
