new nav bar added

--- a/project/index.html
+++ b/project/index.html
@@ -11,8 +11,7 @@
 		<link rel="shortcut icon" href="planting.ico">
 	</head>
 	<body id="homeTarget">
-		<!-- PLEAS ALWAYS ADD COMENTS TO DEFINE WHATs THE NEW SECTION ABOUT-->
-
+	<!-- PLEAS ALWAYS ADD COMENTS TO DEFINE WHATs THE NEW SECTION ABOUT-->
 	<!-- NEW NAW BAR by Mar -->
 				<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 				  <a class="navbar-brand" href="#">Berardo</a>
@@ -27,26 +26,26 @@
 				      <li class="nav-item">
 				        <a class="nav-link" href="aboutus.html">About us</a>
 							</li>
-							</li>
 						 <li class="nav-item">
 								 <a class="nav-link" href="visitus.html">Vist us</a>
 						 </li>
-				      <li class="nav-item">
+						 <li class="nav-item">
+					 		<a class="nav-link" href="#worksTarget">How it works?</a>
+					 	</li>
+							<li class="nav-item">
 				        <a class="nav-link" href="#pricingTarget">Pricing</a>
+							</li>
 				    </ul>
 				    <span class="navbar-text">
 				      my little garden
 				    </span>
 				  </div>
 				</nav>
-
-
-
+		<!-- HEADER-->
 		<header>
 			<h1>Berardo: My Little Garden</h1>
 			<h2>Building Green Communities</h2>
 		</header>
-
 		<!-- ABOUT ME / PROFILE -->
 		<section class="profile">
 			<div class="content-wrap clearfix">
@@ -60,7 +59,7 @@
 		<!-- how it works new section -->
 		<section id="worksTarget" class="how-works">
 			<div class="content-wrap">
-				<h2> How does it work?</h2>
+				<h2> How it works?</h2>
 				<ol>
 					<li> You choose one of the packages we offer, based on how long you'd like to have a small garden at Berardo</li>
 					<li> You get in touch with us via the contacts listed below </li>
@@ -71,12 +70,10 @@
 				</p>
 			</div>
 		</section>
-
 		<!-- pricing FOR THE PRICING SECTION -->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
 				<h2>Discover our pricing packages</h2>
-
 				<div class="pricing-list clearfix">
 					<h3>What will you get?</h3>
 
@@ -146,7 +143,7 @@
 	  crossorigin="anonymous">
 	</script>
 <!-- this is the awesome jQuery to link the nav bar to the pricing section
-seems like the speed of scrolling is too quick -->
+new speed of scrolling reduced-->
 	<script>
 	$(document).ready(function(){
   $("a").on('click', function(event) {
@@ -162,5 +159,4 @@ seems like the speed of scrolling is too quick -->
   });
 });
 	</script>
-
 </html>
