--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -28,6 +28,9 @@
        <li class="nav-item">
            <a class="nav-link" href="visitus.html">Vist us</a>
        </li>
+       <li class="nav-item">
+        <a class="nav-link" href="index.html">How it works?</a>
+      </li>
         <li class="nav-item">
           <a class="nav-link" href="#pricingTarget">Pricing</a>
       </ul>
