--- a/project/visitus.html
+++ b/project/visitus.html
@@ -30,6 +30,9 @@
 					 <li class="nav-item">
 							 <a class="nav-link" href="visitus.html">Vist us</a>
 					 </li>
+					 <li class="nav-item">
+						<a class="nav-link" href="index.html">How it works?</a>
+					</li>
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">Pricing</a>
 					</ul>
