--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -6,9 +6,9 @@
 		<title>My Little Garden / BERARDO | Barcelona</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
+    <link rel="shortcut icon" href="planting.ico">
 	</head>
 <!-- NEW NAW BAR by Mar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
