--- a/project/visitus.html
+++ b/project/visitus.html
@@ -50,7 +50,7 @@
 				<form action="http://forms.brace.io/hello@your-email.com" method="POST">
 					<h2>Visit us!</h2>
 
-					<p>To book an appointment, send us a message at <a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a>, call us at (+34) 933000000 or use the form below.</p>
+					<p>To book an appointment, send us a message at <a href="mailto:marcampssallent@gmail.com">hello@berardogarden.com</a>, call us at (+34) 933000000 or use the form below.</p>
 					<p>
 						<label for="name">Name</label>
 			    	<input id="name" type="text" name="name">
