--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Little Garden / BERARDO | Barcelona</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
@@ -40,72 +40,84 @@
     </div>
   </nav>
 
+<!-- New Section Below! - Dina -->
 
+<!-- Mission/Values -->
 
-
+<!-- this section is still under the class 'profile'. should we be making a new
+class called 'mission/values'? or do we think it's ok to keep it this way? -->
 <section class="profile">
   <div class="content-wrap clearfix">
     <div class="summary">
-      <h2>Hello!</h2>
-      <p>[Profile summary here] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
-      <p>Links to stuff about you, if needed. <a href="#">link</a> and <a href="#">link</a>.</p>
-      <p>Or another paragraph!</p>
+      <h2>Our Mission</h2>
+      <p>Berardo: My Little Garden is a small urban farming business based just outside Barcelona.
+			</p>
+			<p>As we work, we are developing, as well as analyzing, the potential for economic viability in the field of urban farming.
+			</p>
+			<p>We seek to serve a diverse population, and to build a community dialogue about food systems, by involving and educating members in our processes and problem solving.
+			</p>
+			<h2>Our Values</h2>
+			<p>In our garden, and in our lives, we value:</p>
+			<ul>
+				<li>creativity</li>
+			  <li>collective decision-making</li>
+				<li>transparency</li>
+			  <li>sensitivity to people and place</li>
+			  <li>bold ideas</li>
+				<li>humility</li>
+			</ul>
     </div>
   </div>
 </section>
 
-<!-- Our Story -->
+<!-- About us -->
 <section id="usTarget" class="about-us">
   <div class="content-wrap">
-    <h2>Work Experience</h2>
+    <h2>Our Story</h2>
     <div class="item clearfix">
       <div class="details">
-        <h4 class="company">Company Name</h4>
-        <h3>Job title 1</h3>
-        <p class="date">July 2014 - Present</p>
-        <h3>Job title 2</h3>
-        <h4 class="date">July 2011 - July 2014</h4>
+        <h4 class="date">2004-2007</h4>
       </div>
       <div class="description">
-        <p><strong>Job title 1:</strong> [You can use this portion if you held several positions in the company.] Suspendisse dignissim nisi non velit interdum, in condimentum augue varius. Nullam ac felis eu lacus rhoncus posuere. Fusce pretium auctor bibendum. Suspendisse rutrum rhoncus purus sed dapibus. Nulla in viverra justo. Quisque id sapien sed urna lobortis rutrum eu sed enim. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus.</p>
-
-        <p><strong>Job title 2:</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur voluptas, odio deleniti omnis. Eaque, numquam itaque! Maxime, iure dolore ratione tenetur. Sunt nam maxime repellendus! Vitae, natus fugit earum consectetur.</p>
+        <p>Herman Camps grew up cultivating the land around him and wanted to share that experience to those who didn't have acess as a result of living in a large metropolis.
+				</p>
+				<p>Before any planning, designing or construction occurs, Herman conducts a community readiness assessment. The goal is to make sure all interested parties understand the breadth of what is involved in establishing a community garden.
+				</p>
+				<p>Delighted with the response, he starts on the long road of bringing this vision to fruition.
+				</p>
       </div>
-
-    </div><!-- close .job-item -->
-
-    <div class="item clearfix">
-
-      <div class="details">
-        <h4 class="company">Company Name</h4>
-        <h3>Job title</h3>
-        <p class="date">September 2012 - Present</p>
-      </div>
-      <div class="description">
-        <p>Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
-      </div>
-
-    </div><!-- close .job-item -->
+		</div>
 
     <div class="item clearfix">
       <div class="details">
-        <h4 class="company">Company Name</h4>
-        <h3>Job Title</h3>
-        <p class="date">March 2013 - February 2014</p>
+        <h4 class="date">2007-2017</h4>
       </div>
       <div class="description">
-        <p>Redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
-
-        <p>Key contributions:</p>
-        <ul>
-          <li>Responsible for ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-          <li>Created ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-          <li>Organized ... lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-        </ul>
+				<p>After two solid years of searching for a suitable location, a plot of land in [insert name of town/area], just outside Barcelona, is purchased.
+				</p>
+				<p> The planning, designing and subsquent construction gets under way.
+				</p>
+				<p> Finally, after 5 years of working towards the dream, Berardo opens to the public in 2012!
+				</p>
+				<p> The garden continues to gain traction and by 2017 is self-sufficient! It may have taken a decade, but you reap what you sow!
+				</p>
       </div>
-    </div><!-- close .job-item -->
+    </div>
+
+    <div class="item clearfix">
+      <div class="details">
+        <h4 class="date">2017-Now</h4>
+      </div>
+      <div class="description">
+        <p>We continue to grow and community gardens are collaborative by nature.
+				</p>
+        <p>We are building partnerships between groups, schools, neighbors, businesses and generations - all of which are crucial to the long-term success of Berardo!
+				</p>
+      </div>
+    </div>
   </div>
 </section>
+
 <!-- CONTACT INFO -->
 <section class="contact">
   <div class="content-wrap clearfix">
