--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Little Garden / BERARDO | Barcelona</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
@@ -40,36 +40,40 @@
 				    </span>
 				  </div>
 				</nav>
+
 		<!-- HEADER-->
 		<header>
 			<h1>Berardo: My Little Garden</h1>
-			<h2>Building Green Communities</h2>
 		</header>
-		<!-- ABOUT ME / PROFILE -->
+
+		<!--PROFILE -->
 		<section class="profile">
 			<div class="content-wrap clearfix">
 				<div class="summary">
 					<h2>Hello gardener!</h2>
-					<p>Are you passionate about growing your own fruits and vegetables? Do you adore outdoor and gardening? Say no more! You're in the right place🌱 </p>
-					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrion. We provide a perfect option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! 🍓🍅🌷  All while being supported by our wonderful network and staff 🧝🧝🧝</p>
+					<p>Are you passionate about growing your own fruits and vegetables? Do you adore the outdoors and gardening? Say no more!</p>
+					<p>You're in the right place...</p>
+					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrition. We provide the option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! All while being supported by our wonderful network and staff.</p>
 			</div>
 			</div>
 		</section>
-		<!-- how it works new section -->
+
+		<!-- HOW IT WORKS new section -->
 		<section id="worksTarget" class="how-works">
 			<div class="content-wrap">
-				<h2> How it works?</h2>
+				<h2> How does it work?</h2>
 				<ol>
-					<li> You choose one of the packages we offer, based on how long you'd like to have a small garden at Berardo</li>
-					<li> You get in touch with us via the contacts listed below </li>
-					<li> You receive a follow up email and a phone call from one of our garden elfs / staff, who will answer any questions you might have </li>
-					<li> One of our small Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
+					<li> You choose one of the packages we offer, based on how long you'd like to have a garden at Berardo</li>
+					<li> You get in touch with us - see our contact info below or Visit us </li>
+					<li> We will follow up via email or phone and answer any questions you might have </li>
+					<li> One of our Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
 				</ol>
-				<p>	Here's an example of how your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg">look</a> like
+				<p>	Here's an example of what your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg"><strong>look</strong></a> like
 				</p>
 			</div>
 		</section>
-		<!-- pricing FOR THE PRICING SECTION -->
+
+		<!--PRICING-->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
 				<h2>Discover our pricing packages</h2>
@@ -114,7 +118,7 @@
 			</div>
 		</section>
 
-		<!-- CONTACT INFO -->
+		<!-- FOOTER/CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
 				<h2>Get in touch to find out more! </h2>
