-changed degree of transparency for pricing section in css -added comment under header in visit us -added comment under profile -added comment under mission/values

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -45,7 +45,8 @@
 <!-- Mission/Values -->
 
 <!-- this section is still under the class 'profile'. should we be making a new
-class called 'mission/values'? or do we think it's ok to keep it this way? -->
+class called 'mission/values'? or do we think it's ok to keep it this way? we can't change
+background image while it's named profile -->
 <section class="profile">
   <div class="content-wrap clearfix">
     <div class="summary">
