--- a/project/index.html
+++ b/project/index.html
@@ -47,6 +47,7 @@
 		</header>
 
 		<!--PROFILE -->
+		<!-- changed colour here -->
 		<section class="profile">
 			<div class="content-wrap clearfix">
 				<div class="summary">
