just updating the file with the changes that were made in the master previously (git is prompting me to)

--- a/project/aboutus.html
+++ b/project/aboutus.html
@@ -1,2 +1,141 @@
-About us
-<!--comment-->
+<!--about us SECTION Working in porgress-->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>My Little Garden / BERARDO | Barcelona</title>
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/final.css">
+    <link rel="shortcut icon" href="planting.ico">
+	</head>
+<!-- NEW NAW BAR by Mar -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">Berardo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="aboutus.html">About us</a>
+        </li>
+        </li>
+       <li class="nav-item">
+           <a class="nav-link" href="visitus.html">Vist us</a>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="index.html">How it works?</a>
+      </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#pricingTarget">Pricing</a>
+      </ul>
+      <span class="navbar-text">
+        my little garden
+      </span>
+    </div>
+  </nav>
+
+<!-- New Section Below! - Dina -->
+
+<!-- Mission/Values -->
+
+<!-- this section is still under the class 'profile'. should we be making a new
+class called 'mission/values'? or do we think it's ok to keep it this way? we can't change
+background image while it's named profile -->
+<section class="profile">
+  <div class="content-wrap clearfix">
+    <div class="summary">
+      <h2>Our Mission</h2>
+      <p>Berardo: My Little Garden is a small urban farming business based just outside Barcelona.
+			</p>
+			<p>As we work, we are developing, as well as analyzing, the potential for economic viability in the field of urban farming.
+			</p>
+			<p>We seek to serve a diverse population, and to build a community dialogue about food systems, by involving and educating members in our processes and problem solving.
+			</p>
+			<h2>Our Values</h2>
+			<p>In our garden, and in our lives, we value:</p>
+			<ul>
+				<li>creativity</li>
+			  <li>collective decision-making</li>
+				<li>transparency</li>
+			  <li>sensitivity to people and place</li>
+			  <li>bold ideas</li>
+				<li>humility</li>
+			</ul>
+    </div>
+  </div>
+</section>
+
+<!-- About us -->
+<section id="usTarget" class="about-us">
+  <div class="content-wrap">
+    <h2>Our Story</h2>
+    <div class="item clearfix">
+      <div class="details">
+        <h4 class="date">2004-2007</h4>
+      </div>
+      <div class="description">
+        <p>Herman Camps grew up cultivating the land around him and wanted to share that experience to those who didn't have acess as a result of living in a large metropolis.
+				</p>
+				<p>Before any planning, designing or construction occurs, Herman conducts a community readiness assessment. The goal is to make sure all interested parties understand the breadth of what is involved in establishing a community garden.
+				</p>
+				<p>Delighted with the response, he starts on the long road of bringing this vision to fruition.
+				</p>
+      </div>
+		</div>
+
+    <div class="item clearfix">
+      <div class="details">
+        <h4 class="date">2007-2017</h4>
+      </div>
+      <div class="description">
+				<p>After two solid years of searching for a suitable location, a plot of land in [insert name of town/area], just outside Barcelona, is purchased.
+				</p>
+				<p> The planning, designing and subsquent construction gets under way.
+				</p>
+				<p> Finally, after 5 years of working towards the dream, Berardo opens to the public in 2012!
+				</p>
+				<p> The garden continues to gain traction and by 2017 is self-sufficient! It may have taken a decade, but you reap what you sow!
+				</p>
+      </div>
+    </div>
+
+    <div class="item clearfix">
+      <div class="details">
+        <h4 class="date">2017-Now</h4>
+      </div>
+      <div class="description">
+        <p>We continue to grow and community gardens are collaborative by nature.
+				</p>
+        <p>We are building partnerships between groups, schools, neighbors, businesses and generations - all of which are crucial to the long-term success of Berardo!
+				</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT INFO -->
+<section class="contact">
+  <div class="content-wrap clearfix">
+    <h2>Get in touch to find out more! </h2>
+
+    <div class="social">
+      <a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+    </div>
+
+    <p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
+    <p>+34.123.4567</p>
+    <p>123 Anywhere St.<br>
+     Barcelona, Spain</p>
+
+    <footer>
+      <p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
+    </footer>
+  </div>
+</section>
