--- a/project/index.html
+++ b/project/index.html
@@ -3,25 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>My Little Garden / BERARDO | Barcelona</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
+		<link href="https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Pacifico|Satisfy&display=swap" rel='stylesheet' type='text/css'>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/final.css">
+		<link rel="shortcut icon" href="planting.ico">
 	</head>
-	<body>
-		<!-- HEADER
-		<nav>
-			<ul>
-				<li><a href="exercise7-home.html">Our Story</a></li>
-				<li><a href="#">Visit Us</a></li>
-				<li><a href="#">Contact US</a></li>
-				<li><a href="#">Our Network</a></li>
-			</ul>
-		</nav>
-
-		coment end here if you delete that you go back to the old nov bar-->
-
+	<body id="homeTarget">
+	<!-- PLEAS ALWAYS ADD COMENTS TO DEFINE WHATs THE NEW SECTION ABOUT-->
 	<!-- NEW NAW BAR by Mar -->
 				<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 				  <a class="navbar-brand" href="#">Berardo</a>
@@ -31,14 +19,20 @@
 				  <div class="collapse navbar-collapse" id="navbarText">
 				    <ul class="navbar-nav mr-auto">
 				      <li class="nav-item active">
-				        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#">AboutUs</a>
-				      </li>
-				      <li class="nav-item">
+				        <a class="nav-link" href="aboutus.html">About us</a>
+							</li>
+						  <li class="nav-item">
+								 <a class="nav-link" href="visitus.html">Vist us</a>
+						  </li>
+						  <li class="nav-item">
+					 		  <a class="nav-link" href="#worksTarget">How it works?</a>
+					 	  </li>
+						  <li class="nav-item">
 				        <a class="nav-link" href="#pricingTarget">Pricing</a>
-				      </li>
+						  </li>
 				    </ul>
 				    <span class="navbar-text">
 				      my little garden
@@ -46,41 +40,45 @@
 				  </div>
 				</nav>
 
-
-
+		<!-- HEADER-->
 		<header>
 			<h1>Berardo: My Little Garden</h1>
-			<h2>Building Green Communities</h2>
 		</header>
 
-		<!-- ABOUT ME / PROFILE -->
+		<!--PROFILE -->
+		<!-- changed colour here -->
 		<section class="profile">
 			<div class="content-wrap clearfix">
 				<div class="summary">
-					<h2>Hello fellow gardener!</h2>
-					<p>Are you passionate about growing your own fruits and vegetables? Do you adore outdoor and gardening? Say no more! You're in the right place🌱 </p>
-					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrion. We provide a perfect option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! 🍓🍅🌷  All while being supported by our wonderful network and staff 🧝🧝🧝</p>
-					<h4> How does it work?</h4>
-
-					<ol>
-						<li> You choose one of the packages we offer, based on how long you'd like to have a small garden at Berardo</li>
-						<li> You get in touch with us via the contacts listed below </li>
-						<li> You receive a follow up email and a phone call fron one of our garden elfs / staff, who will answer any questions you might have </li>
-						<li> One of our small Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
-					</ol>
-			<p>	Here's an example of how your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg">look</a> like </p>
-				</div>
+					<h2>Hello gardener!</h2>
+					<p>Are you passionate about growing your own fruits and vegetables? Do you adore the outdoors and gardening? Say no more!</p>
+					<p>You're in the right place...</p>
+					<p> We are a Barcelona-based, family-run enterprise that enables people to grow, garden and care for their nutrition. We provide the option of having your own garden outside of the busy metropolian area, where you can grow your own fruits, vegetables or flowers! All while being supported by our wonderful network and staff.</p>
+			</div>
 			</div>
 		</section>
-
-		<!-- pricing FOR THE PRICING SECTION -->
+		<!-- EMPTY SECTION -->
+		<div id="empty"></div>
+		<!-- HOW IT WORKS new section -->
+		<section id="worksTarget" class="how-works">
+			<div class="content-wrap">
+				<h2> How does it work?</h2>
+				<ol>
+					<li> You choose one of the packages we offer, based on how long you'd like to have a garden at Berardo</li>
+					<li> You get in touch with us - see our contact info below or Visit us </li>
+					<li> We will follow up via email or phone and answer any questions you might have </li>
+					<li> One of our Berardo gardens is all YOURS - ready to grow and nurture veggies, fruits and flowers! </li>
+				</ol>
+				<p>	Here's an example of what your garden could <a href="http://www.vegetable-gardening-online.com/images/xgrowingasquarefootgarden.jpg.pagespeed.ic.g0Ew_MukUW.jpg"><strong>look</strong></a> like
+				</p>
+			</div>
+		</section>
+		<!--PRICING-->
 		<section id="pricingTarget" class="pricing">
 			<div class="content-wrap">
 				<h2>Discover our pricing packages</h2>
-
 				<div class="pricing-list clearfix">
 					<h3>What will you get?</h3>
-
 					<div class="columns">
 						<h4>Support:</h4>
 						<ul>
@@ -100,13 +98,12 @@
 					<div class="columns">
 						<h4>Network:</h4>
 						<ul>
-							<li><i class="fa fa-check"></i> Bernardo community </li>
+							<li><i class="fa fa-check"></i> Berardo community </li>
 							<li><i class="fa fa-check"></i> Locals and gardening fans </li>
 							<li><i class="fa fa-check"></i> Suppliers </li>
 						</ul>
 					</div>
 				</div>
-
 				<div class="pricing-circles">
 					<h3>What will you pay?</h3>
 					<ul>
@@ -118,37 +115,47 @@
 				</div>
 			</div>
 		</section>
-
-
-
-
-
-		<!-- CONTACT INFO -->
+		<!-- Google Maps API -->
+		<div id="map"></div>
+		<!-- FOOTER/CONTACT INFO -->
 		<section class="contact">
 			<div class="content-wrap clearfix">
-				<h2>Get in touch or sign-up to find out more! </h2>
+				<h2>Get in touch to find out more! </h2>
 
 				<div class="social">
 					<a href="https://twitter.com/BerardoGarden" title="Twitter"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.linkedin.com/in/marcampssallent/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
 				</div>
-
 				<p><a href="mailto:hello@berardogarden.com">hello@berardogarden.com</a></p>
 				<p>+34.123.4567</p>
 				<p>123 Anywhere St.<br>
 				 Barcelona, Spain</p>
-
 				<footer>
-					<p class="copyright">Copyright &#169; 2019 by Berardo: My Little Garden</p>
+					<p class="copyright">&#169; 2019 by Berardo: My Little Garden</p>
 				</footer>
 			</div>
 		</section>
 	</body>
-	<script
+	<script>
+			// Initialize and add the map BERARDO: 41.559222, 2.064889
+			function initMap() {
+			  var berardo = {lat: 41.559222, lng: 2.064889};
+			  var map = new google.maps.Map(
+			      document.getElementById('map'), {zoom: 17, center: berardo, mapTypeId:'satellite'});
+			  var marker = new google.maps.Marker({position: berardo, map: map});
+			}
+	</script>
+	</script>
+	 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8T-f1mbHQkSIi_laMFVmjrvmOfBAC4Nk&callback=initMap"
+	 async defer>
+	</script>
+	<script>
 	  src="https://code.jquery.com/jquery-3.4.1.min.js"
-	  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 	  crossorigin="anonymous">
 	</script>
-<!-- this is the awesome jQuery to link the nav bar to the pricing section -->
+<!-- this is the awesome jQuery to link the nav bar to the pricing section
+new speed of scrolling reduced-->
 	<script>
 	$(document).ready(function(){
   $("a").on('click', function(event) {
@@ -164,5 +171,4 @@
   });
 });
 	</script>
-
 </html>
